Add article resource
